Finally got the first 2 cells running

--- a/notebooks/well_time_series_analysis.ipynb
+++ b/notebooks/well_time_series_analysis.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
     "from sklearn.metrics import mean_squared_error, mean_absolute_error, r2_score\n",
     "from datetime import datetime\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.ensemble import IsolationForest\n",
+    "from sklearn.ensemble import IsolationForest \n",
     "from sklearn.covariance import EllipticEnvelope\n",
     "from sklearn.neighbors import LocalOutlierFactor\n",
     "from scipy import stats\n",
@@ -45,8 +45,9 @@
     ")\n",
     "from src.train import train_model\n",
     "\n",
-    "# Set plotting style    \n",
-    "plt.style.use('seaborn')\n",
+    "# Set plotting style\n",
+    "plt.style.use('seaborn-v0_8-darkgrid')  # safer on newer versions\n",
+    "\n",
     "%matplotlib inline\n",
     "sns.set_palette('husl')\n",
     "plt.rcParams['figure.figsize'] = [12, 8]"
@@ -105,7 +106,7 @@
    "source": [
     "\n",
     "# Detect outliers for numeric columns\n",
-    "numeric_columns = data.select_dtypes(include=[np.number]).columns\n",
+    "numeric_columns = data.select_dtypes(include=[np.number]).columns.tolist()\n",
     "outliers = detect_outliers(data, numeric_columns)\n",
     "\n",
     "# Plot outlier detection results\n",
