outlier detection runtime errors being resolved

--- a/notebooks/well_time_series_analysis.ipynb
+++ b/notebooks/well_time_series_analysis.ipynb
@@ -38,7 +38,7 @@
     "# Import our custom modules\n",
     "from src.models.well_ts_model import WellLSTM\n",
     "from src.utils.data_processor import TagDataProcessor, prepare_dataloader, WellTimeSeriesDataset\n",
-    "from src.utils.notebook_utils import detect_outliers, compare_outlier_methods, detect_time_series_outliers, analyze_seasonal_patterns\n",
+    "from src.utils.outliers import detect_outliers, compare_outlier_methods, detect_time_series_outliers, analyze_seasonal_patterns\n",
     "from src.utils.visualization_utils import (\n",
     "    plot_sensor_analysis,\n",
     "    analyze_data_balance\n",
